@@ -1,29 +1,29 @@
 package br.com.fiap.cheffy.mapper;
 
-import br.com.fiap.cheffy.model.entities.Profile;
-import br.com.fiap.cheffy.model.entities.User;
 import br.com.fiap.cheffy.model.dtos.UserCreateDTO;
 import br.com.fiap.cheffy.model.dtos.UserResponseDTO;
-import br.com.fiap.cheffy.model.dtos.UserUpdateDTO;
+import br.com.fiap.cheffy.model.entities.Profile;
+import br.com.fiap.cheffy.model.entities.User;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
-import org.mapstruct.MappingTarget;
 import org.mapstruct.ReportingPolicy;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Mapper(componentModel = "spring", unmappedTargetPolicy = ReportingPolicy.IGNORE)
+@Mapper(
+        componentModel = "spring",
+        unmappedTargetPolicy = ReportingPolicy.IGNORE,
+        uses = AddressMapper.class
+)
 public interface UserMapper {
 
     @Mapping(target = "profiles", ignore = true)
     User mapToEntity(UserCreateDTO tbUserDTO);
 
+    @Mapping(target = "addresses", source = "addresses")
     @Mapping(target = "profiles", expression = "java(mapProfiles(user))")
     UserResponseDTO mapToDTO(User user);
-
-    void updateUserFromDto(UserUpdateDTO tbUserDTO, @MappingTarget User user);
 
     default List<String> mapProfiles(User user) {
         if (user.getProfiles() == null || user.getProfiles().isEmpty()) {
@@ -31,7 +31,7 @@ public interface UserMapper {
         }
         return user.getProfiles().stream()
                 .map(Profile::getType)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
